styles/detail-page/movie-content.module.scss
// *
.synopsys__container,
.credits__container,
.videos__container,
.similar__container {
  width: 70%;
  grid-area: bottom;
  margin: 0 auto;
}
.credits__container,
.videos__container,
.similar__container {
  h2 {
    font-size: 2rem;
    font-weight: bold;
    margin: 0 0 70px;
    padding: 0 0 0 1rem;
    border-left: 5px solid #666;
  }
}
// ==== {Children} ====
// Synopsys Page (main)
.synopsys__container {
  > article {
    width: 100%;
    height: 100%;
    border-bottom: 1px solid rgba(31, 31, 31, 0.7);
    padding: 75px 0;
    &:first-child {
      padding: 0 0 75px;
    }
    h2 {
      font-weight: bold;
      font-size: 1.5rem;
      margin: 0 0 36px;
    }
    ul {
      width: 100%;
      gap: 16px;
      display: flex;
    }
    a {
      float: right;
      margin: 24px 0 0;
    }
  }
  // -------------------------------------------
  // 소개
  .about {
    h2 {
      font-size: 2rem;
      margin: 0 0 32px 0;
    }
    > p {
      width: 70%;
      line-height: 1.5rem;
      padding: 0 0 0 16px;
      margin: 0 0 100px;
    }
    // 제조국
    h3 {
      color: #888;
      font-weight: bold;
      font-size: 1rem;
      margin: 0 0 16px;
    }
    ul {
      margin: 0 0 50px;
    }
  }
  // 출연진
  .credits {
    ul {
      li {
        width: 20%;
        text-align: center;
        img {
          width: 100%;
          border-radius: 3%;
          margin-bottom: 8px;
          padding: 0 24px 16px;
        }
        .credit_name {
          font-size: 18px;
          font-weight: bold;
          margin-bottom: 12px;
        }
        .credit_character {
          font-size: 16px;
          color: #888;
        }
      }
    }
  }
  // 비디오
  .videos {
    ul {
      li {
        width: 33%;
        iframe {
          width: 100%;
          border-radius: 10px;
          opacity: 0.8;
          transition: opacity 0.2s ease-in-out;
          &:hover {
            opacity: 1;
          }
        }
      }
    }
  }
  // 관련 영화
  .similar {
    ul {
      display: flex;
      justify-content: space-between;
      li {
        width: 18%;
        img {
          width: 100%;
          border-radius: 10%;
          margin: 0 0 6px;
        }
        // similar title
        p {
          font-size: 0.875rem;
          color: #aaa;
        }
      }
    }
  }
  // -------------------------------------------
}

// credits
.credits__container {
  ul {
    text-align: left;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(350px, auto));
    grid-template-rows: 1fr auto;
    justify-content: space-between;
    gap: 50px;
    li {
      display: flex;
      figure {
        img {
          width: 100%;
          height: 100%;
        }
      }
      article {
        padding: 16px 0 0 36px;
        .name {
          font-size: 1.25rem;
          line-height: 2.5rem;
          font-weight: bold;
        }
        .character {
          color: #ccc;
          font-size: 1rem;
          font-weight: normal;
        }
      }
    }
  }
}

// video
.videos__container {
  ul {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 50px;
    li {
      iframe {
        width: 100%;
        max-width: 400px;
        border-radius: 10px;
        opacity: 0.8;
        transition: opacity 0.2s ease-in-out;
        margin: 0 auto;
        &:hover {
          opacity: 1;
        }
      }
      p {
        color: #aaa;
      }
    }
  }

}

// similar
.similar__container {
  > ul {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    gap: 50px;
    li {
      width: 100%;
      height: 100%;
      display: flex;
      flex-wrap: wrap;
      img {
        width: 20%;
      }
      article {
        width: 70%;
        height: 100%;
        padding: 0 0 0 16px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        // position: relative;
        .title {
          font-size: 1.125rem;
          line-height: 1.75rem;
        }
        .genres {
          display: flex;
          flex-wrap: wrap;
          gap: 8px;
          p {
            color: #aaa;
            font-size: 0.875rem;
          }
        }
        a {
          font-size: 0.875rem;
          align-self: flex-end;
        }
      }
    }
  }
}

